--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-            font-family: sans-serif;
+            font-family: "National Park", sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
@@ -43,13 +43,14 @@ nav ul {
         }
 
 nav li {
-            margin-right: 20px;
+            margin-right: 15px;
         }
 
 nav a {
             text-decoration: none;
-            color: #333;
+            color: #1E234D;
             font-weight: bold;
+            font-size: 15px;
         }
 
 .hero {
@@ -80,6 +81,7 @@ h1 {
 
 p {
             margin-bottom: 15px;
+            font-size: 15px;
         }
 
 .button {
@@ -99,7 +101,7 @@ p {
         }
 
 .quick-links h2 {
-            font-size: 1.5em;
+            font-size: 23px;
             margin-bottom: 15px;
         }
 
@@ -127,7 +129,7 @@ p {
         }
 
 .projetos-section h2 {
-            font-size: 1.5em;
+            font-size: 23px;
             margin-bottom: 20px;
         }
 
@@ -154,18 +156,18 @@ p {
         }
 
 .projeto-info h3 {
-            font-size: 1.2em;
+            font-size: 20px;
             margin-bottom: 5px;
         }
 
 .projeto-data {
-            font-size: 0.9em;
+            font-size: 15px;
             color: #777;
             margin-bottom: 10px;
         }
 
 .projeto-descriçao {
-            font-size: 1em;
+            font-size: 15px;
             color: #555;
             margin-bottom: 15px;
         }
@@ -192,7 +194,7 @@ p {
         }
 
 .dasredes-header h2 {
-            font-size: 1.5em;
+            font-size: 23px;
         }
 
 .dasredes-header a {
@@ -241,7 +243,7 @@ p {
 }
 
 .sobre-section h2 {
-    font-size: 1.5em;
+    font-size: 23px;
     margin-bottom: 20px;
 }
 
@@ -289,7 +291,7 @@ p {
 }
 
 .contato-header h2 {
-    font-size: 1.5em;
+    font-size: 23px;
 }
 
 .contato-header a {
@@ -332,4 +334,37 @@ p {
 .contato-card p {
     color: #555;
     margin-bottom: 15px;
+}
+
+@media (max-width: 420px){
+    nav ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+    }
+
+    nav li {
+        margin-right: 10px;
+    }
+    
+    nav a {
+        text-decoration: none;
+        color: #1E234D;
+        font-weight: bold;
+        font-size: 15px;
+    }
+    .hero-image {
+        display: none;
+    }
+
+    .quick-links li a {
+        display: inline-block;
+        padding: 10px 15px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        text-decoration: none;
+        color: #333;
+        font-size: 15px;
+    }
 }
